Safari 13 gap fixes

--- a/assets/src/scss/components/_logo.scss
+++ b/assets/src/scss/components/_logo.scss
@@ -4,7 +4,6 @@
   @include media-up(md) {
     display: flex;
     padding: 0;
-    gap: 14px;
   }
 
   @include media-up(xl) {
@@ -18,6 +17,7 @@
     @include media-up(md) {
       width: 48px;
       height: 48px;
+      margin-right: 14px;
     }
   }
 
