--- a/assets/src/scss/pages/home/_faq.scss
+++ b/assets/src/scss/pages/home/_faq.scss
@@ -1,7 +1,6 @@
 .faq {
   &__wrapper {
     display: grid;
-    gap: 40px;
 
     @include media-up(md) {
       grid-template-columns: repeat(2, 1fr);
@@ -9,7 +8,12 @@
   }
 
   &__title {
-    margin-bottom: 0;
+    margin-bottom: 40px;
+
+    @include media-up(md) {
+      margin-bottom: 0;
+      margin-right: 40px;
+    }
   }
 
   &__content {
@@ -30,7 +34,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
     padding: 20px 0;
     margin-bottom: 0;
     cursor: pointer;
@@ -45,6 +48,7 @@
     position: relative;
     width: 32px;
     height: 32px;
+    margin-left: 20px;
     border-radius: 50%;
     background: $color-ghost;
     transition: transform .3s;
