--- a/assets/src/scss/pages/home/_hero.scss
+++ b/assets/src/scss/pages/home/_hero.scss
@@ -84,18 +84,25 @@
   &__buttons {
     display: flex;
     flex-direction: column;
-    gap: 20px;
     margin-top: auto;
 
     @include media-up(md) {
       flex-direction: row;
-      gap: 24px;
       margin-top: 30px;
     }
 
     .btn {
       @include media-down(sm) {
         width: 100%;
+      }
+
+      &:not(:last-child) {
+        margin-bottom: 20px;
+
+        @include media-up(md) {
+          margin-bottom: 0;
+          margin-right: 24px;
+        }
       }
     }
   }
